# Project_Cards

./: .gitignore  CMakeLists.txt  main.cpp
cards/: CMakeLists.txt  cards.cpp  cards.h  main.cpp
cards/cardss/: CMakeLists.txt  ImageCard.cpp  ImageCard.h  TextCard.cpp  TextCard.h  cards.h  menu.cpp  menu.h
